
bin_SCRIPTS = pygtk-codegen-2.0

codegendir = $(pkgdatadir)/2.0/codegen

codegen_PYTHON = \
	__init__.py \
	argtypes.py \
	codegen.py \
	definitions.py \
	defsparser.py \
	docextract.py \
	docgen.py \
	h2def.py \
	mergedefs.py \
	mkskel.py \
	override.py \
	scmexpr.py

EXTRA_DIST = README.defs pygtk-codegen-2.0.in
