EXTRA_DIST = \
  atk/atk-demo.py \
  gobject/signal.py \
  gobject/properties.py \
  gtk/filechooser.py \
  gtk/widget.py \
  gtk/uimanager.py \
  pango/utf8-demo.py \
  pygtk-demo/pygtk-demo.py \
  pygtk-demo/gtk-logo-rgb.gif \
  pygtk-demo/floppybuddy.gif \
  pygtk-demo/alphatest.png \
  pygtk-demo/demos/__init__.py \
  pygtk-demo/demos/appwindow.py \
  pygtk-demo/demos/buttonbox.py \
  pygtk-demo/demos/colorsel.py \
  pygtk-demo/demos/dialogs.py \
  pygtk-demo/demos/dndpixmap.py \
  pygtk-demo/demos/dnd.py \
  pygtk-demo/demos/editable_cells.py \
  pygtk-demo/demos/itemfactory.py \
  pygtk-demo/demos/list_store.py \
  pygtk-demo/demos/menu.py \
  pygtk-demo/demos/panes.py \
  pygtk-demo/demos/sizegroup.py \
  pygtk-demo/demos/stock_browser.py \
  pygtk-demo/demos/toolbar.py \
  pygtk-demo/demos/treemodel.py \
  pygtk-demo/demos/entrycompletion.py \
  ide/gtkcons.py \
  ide/gtkdb.py \
  ide/edit.py \
  ide/browse.py \
  ide/minibreak.xpm \
  ide/README \
  ide/gtkprof.py \
  ide/pyide.py \
  ide/break.xpm \
  ide/return.xpm \
  ide/next.xpm \
  ide/continue.xpm \
  ide/step.xpm \
  ide/edit.xpm \
  ide/run.xpm \
  ide/quit.xpm \
  simple/hello.py \
  simple/simple.py \
  simple/tooltip.py \
  simple/scribble.py \
  simple/dnd.py \
  simple/dndpixmap.py \
  simple/README \
  neil/TAppli.py \
  neil/TAppli2.py \
  neil/TAppli3.py \
  neil/TAppli4.py \
  neil/TAppli5.py \
  neil/bomb.xpm \
  neil/gtk-logo.xpm \
  neil/question.xpm \
  neil/notebook.py \
  neil/README \
  glade/README \
  glade/glade-demo.py \
  glade/test.glade
